# Waypoint

./: CMakeLists.txt
config/: config.json
include/: config.h  database.h  event.h
src/: config.cpp  database.cpp  main.cpp  server.cpp
static/: app.js  style.css
templates/: index.html
